<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:id="@+id/item_layout"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.edu.wat.myapplication.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
        android:src="@drawable/icon_128"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
    android:id="@+id/loginMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/HintImie"
    android:gravity="center"
    android:layout_alignBaseline="@+id/zaloguj"
    android:layout_alignBottom="@+id/zaloguj"
    android:layout_alignLeft="@+id/textView3"
    android:layout_alignStart="@+id/textView3"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Headding"
        android:password="true"
        android:gravity="center"
        android:id="@+id/password" />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rememberME"
        android:text="Zapamiętaj mnie."
        android:gravity="center"
        />
    <Button
        android:id="@+id/zaloguj"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/Login"
        android:layout_gravity="center"
        android:onClick="onNextClick"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/Register"
        android:layout_gravity="center"
        android:onClick="onRegister"
        android:layout_alignBaseline="@+id/zaloguj"
        android:layout_alignBottom="@+id/zaloguj"
        android:layout_centerHorizontal="true" />
        </LinearLayout>

    </ScrollView>
    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />


</LinearLayout>
