<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.edu.wat.myapplication.LogowanieActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/Powitanie"
        android:gravity="center"
        android:id="@+id/textView" />
    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:gravity="center"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <ImageView android:layout_width="240dp"
        android:layout_height="240dp"
        android:id="@+id/AwatarLogowanie"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/PowrótDoLogowania"
        android:layout_gravity="bottom"
        android:onClick="onPowrot"
        android:id="@+id/button2"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:text="@string/WybierzDzień"
    android:onClick="onDalej"
    android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="Postępy"
            android:id="@+id/postepy"
            android:onClick="onPostępy"
            android:layout_width="110dp"
            android:layout_height="48dp"

            >
        </Button>
        <Button
            android:text="CPM"
            android:id="@+id/CPM"
            android:onClick="onCPM"
            android:layout_width="110dp"
            android:layout_height="48dp"

            >
        </Button>
        <Button
            android:text="Kalorie"
            android:id="@+id/Kalorie"
            android:onClick="onKalorie"
            android:layout_width="110dp"
            android:layout_height="48dp"
            >

        </Button>
    </LinearLayout>

</RelativeLayout>
